--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nova-evenity",
   "description": "Unified event attachment and emit utility",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "author": "Jean Ponchon <jean.ponchon@novadiscovery.com>",
   "repository": {
     "type": "git",
@@ -10,22 +10,24 @@
   "license": "MIT",
   "main": "lib/evenity",
   "engines": {
-      "node": ">= 0.12"
+    "node": ">= 0.12"
   },
-
   "scripts": {
     "test": "kawa test/evenity.test.js --phantom --reporter spec",
     "monitor": "kawa test/evenity.test.js --reporter spec --watch",
     "matrix": "kawa test/evenity.test.js --reporter matrix --watch",
     "standard": "./node_modules/.bin/standard"
   },
-
-  "dependencies": { },
+  "dependencies": {},
   "devDependencies": {
     "kawa": "*",
     "expect.js": "*",
     "standard": "*"
   },
-
-  "keywords": ["event", "emit", "attach", "unified"]
+  "keywords": [
+    "event",
+    "emit",
+    "attach",
+    "unified"
+  ]
 }
