--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "nova-evenity",
+  "name": "evenity",
   "description": "Unified event attachment and emit utility",
   "version": "1.0.0",
   "author": "Jean Ponchon <jean.ponchon@novadiscovery.com>",
   "repository": {
     "type": "git",
-    "url": "http://git.novadiscovery.net/tools/evenity.git"
+    "url": "https://github.com/nopnop/evenity.git"
   },
   "license": "MIT",
   "main": "lib/evenity",
